--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <hr>
         <div class="row">
             <div class="card">
-                <img src="perimeter.png">
+                <img src="BlogPost.jpg">
                 <div class="container">
                     <h4><b>Perimeter Calculator</b></h4> 
                     <p>
-                        <a href="https://studio.code.org/projects/applab/QQAlUIocQeTL7k2SGHIKaerjiROXChGCxM4ly18liGk" target="_blank">
+                        <a href="https://nobodyusesthisaccount.github.io/Blog/" target="_blank">
                         Click here to open
                         </a>
                     </p> 
