--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             senserit.</p>
     </section>
     <section id="works" class="center">
-        <h1>My Works</h1>
+        <h1>Blog</h1>
         <hr>
         <div class="row">
             <div class="card">
