--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card">
                 <img src="BlogPost.jpg">
                 <div class="container">
-                    <h4><b>Perimeter Calculator</b></h4> 
+                    <h4><b>Blog</b></h4> 
                     <p>
                         <a href="https://nobodyusesthisaccount.github.io/Blog/" target="_blank">
                         Click here to open
